# recommendation-engine

./: .dockerignore  .gitignore  AGENTS.md  README.md  compose.yaml  curls.md  plan.md  style_map.md
api/: Dockerfile  README.md  pyproject.toml
api/src/: main.py
api/src/models/: recommender.py
api/src/routers/: recommender.py
api/src/services/: recommender.py
api/src/utils/: logger.py
pipeline/: Dockerfile  README.md  pyproject.toml
pipeline/src/: __init__.py  data_prep.py  towers.py  train.py
pipeline/src/utils/: rate_limiter.py  validate_image_bytes.py
